feat: add css for rendering ships

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,6 +47,11 @@ h2{
   padding: 20px;
 }
 
+.ship {
+    position: relative;
+    background-color: #000;
+  }
+
 .layout-hidden {
   display: none;
   z-index: -1;
