--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,15 +10,15 @@ body{
 
 th{
   background-color: #ccc;
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   vertical-align: middle;
 }
 td{
   border: 1px solid #000;
 	background-clip: padding-box;
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   text-align: center;
   vertical-align: middle;
 }
@@ -26,34 +26,89 @@ div#wrapper{
   display: flex;
   flex-flow: row;
   justify-content: space-between;
-  width:  760px;
+  width:  680px;
   margin: 0 auto;
   margin-top: 50px;
 
 }
 
 #left{
-  width: 350px;
+  width: 260px;
 }
 
 #right {
   
-  width: 350px;
+  width: 260px;
 }
 
 h2{
-  font-size: 1.5em;
+  font-size: 1.2em;
   text-align: center;
-  padding: 20px;
+  
+}
+
+a.cell{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: block;
+    vertical-align: middle;
+    color: blue;
+}
+
+a.cell:hover{
+    background-color: green;
 }
 
 .ship {
     position: relative;
     background-color: #000;
-  }
+}
+
+.miss{
+    position: relative;
+    background-color: yellow;
+}
+
+.hit{
+    position: relative;
+    background-color: red;
+}
 
 .layout-hidden {
   display: none;
   z-index: -1;
 }
 
+.layout-visible {
+    background-color: white;
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    opacity: 1;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #change_player {
+    background-color: green;
+    color: white;
+    border-radius: 10px;
+    outline: none;
+    width: 100px;
+  }
+
+
+  @media (max-width: 720px) {
+
+    div#wrapper{  
+        flex-flow: column;
+        align-items: center;
+        width:  300px;    
+        margin-top: 30px;
+    }
+  }
